Fix Bug with top display on iPhone 6

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 }
 .App-header {
   background-color: #222;
-  height: 180px;
+  height: 200px;
   padding: 20px;
   color: white;
 }
